--- a/assets/scss/styleS.scss
+++ b/assets/scss/styleS.scss
@@ -87,7 +87,7 @@
 }
 
 .navbar-expand .navbar-nav .dropdown-menu {
-    background-color: #191c24 !important;
+    background-color: #19241d !important;
 }
 
 .bg-templant {
